typesafe_builder_derive/tests/ui/4.stderr
error[E0599]: no method named `build` found for struct `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderFilled, _TypesafeBuilderEmpty>` in the current scope
  --> tests/ui/4.rs:21:10
   |
7  |       #[derive(Builder)]
   |                ------- method `build` not found for this struct
...
18 |       let user = UserBuilder::new()
   |  ________________-
19 | |         .with_name("Alice".to_string())
20 | |         .with_age(20)
21 | |         .build();
   | |         -^^^^^ method not found in `UserBuilder<_TypesafeBuilderFilled, _TypesafeBuilderFilled, _TypesafeBuilderEmpty>`
   | |_________|
   |
   |
   = note: the method was found for
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderEmpty>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty, _TypesafeBuilderFilled>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderFilled, _TypesafeBuilderEmpty>`
           - `UserBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderFilled, _TypesafeBuilderFilled>`
           and 3 more types
